Make glass_engine fit into the glass styles
 - submenu on left
 - index page classes & styles
 - _form with submenu

--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -1,3 +1,5 @@
+<%%= render 'refinery/<%= namespacing.underscore %>/admin/submenu' %>
+
 <%
   text_areas = attributes.reject{|a| a.field_type.to_s != 'text_area'}
   generated_text_areas = false
