--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_sortable_list.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_sortable_list.html.erb
@@ -1,4 +1,4 @@
-<ul id='sortable_list'>
+<ul id='sortable_list' class='list-unstyled sortable_list'>
   <%%= render :partial => '<%= singular_name %>', :collection => @<%= plural_name %> %>
 </ul>
 <%%= render '/refinery/admin/sortable_list',
