--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -1,7 +1,7 @@
-<section id='records'>
-  <%%= render 'records' %>
-</section>
-<aside id='actions'>
-  <%%= render 'actions' %>
-</aside>
-<%%= render '/refinery/admin/make_sortable', :tree => false if !searching? and ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.sortable? and ::Refinery::<%= namespacing %>::<%= class_name %>.many? %>
+<%% content_for :admin_content do %>
+  <section id='admin-page-content'>
+    <%%= render 'records' %>
+  </section>
+  <%%= render '/refinery/admin/make_sortable', :tree => false if !searching? and ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.sortable? and ::Refinery::<%= namespacing %>::<%= class_name %>.many? %>
+<%% end %>
+<%%= render 'refinery/<%= namespacing.underscore %>/admin/submenu' %>
