--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -24,14 +24,14 @@
     
     <span class='actions'>          
       <span class="edit">
-        <%= link_to '<i class="gcicon gcicon-edit top-down"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-edit bump-right"></i>'.html_safe,
                   refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)),
                   :class => "circle-icon",
                   :title => t('edit', :scope => 'refinery.admin.pages') %>
       </span>
       
       <span class="preview">
-        <%= link_to '<i class="gcicon gcicon-screen top-down"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-screen bump-down"></i>'.html_safe,
                   page.url,
                   :target => "_blank",
                   :class => "circle-icon",
@@ -39,14 +39,14 @@
       </span>
       
       <span class="add-child">           
-        <%= link_to '<i class="gcicon gcicon-add top-down"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe,
                   refinery.new_admin_page_path(:parent_id => page.id),
                   :class => "circle-icon",
                   :title => t('new', :scope => 'refinery.admin.pages') %>
       </span>
       
       <span class="delete">
-        <%= link_to '<i class="gcicon gcicon-trash top-down"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe,
                   refinery.admin_page_path(page.nested_url),
                   :class => "cancel confirm-delete circle-icon",
                   :title => t('delete', :scope => 'refinery.admin.pages'),
