--- a/app/views/refinery/admin/pages/beta-new.html.erb
+++ b/app/views/refinery/admin/pages/beta-new.html.erb
@@ -2,7 +2,7 @@
   <div class="page-options">
     <div class="deliver row">
       <div class="pull-left">
-        <a href="" class="circle-icon"><i class="gcicon gcicon-screen top-down"></i></a>
+        <a href="" class="circle-icon"><i class="gcicon gcicon-screen bump-down"></i></a>
       </div>
       <div class="pull-right">
         <a href="" class="circle-icon save-page"><i class="gcicon gcicon-save"></i></a>
@@ -102,20 +102,18 @@
   <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           
-  <div class="new-module">
+  <div class="new-module clear">
     <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-    <div class="clearfix"></div>
   </div>
   
-  <div class="new-module media-chooser">
+  <div class="new-module media-chooser clear">
     <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
-    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph top-down"></i></a>
-    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph bump-down"></i></a>
+    <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
     <a href="" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
-    <div class="clearfix"></div>
   </div>
   
-  <div class="new-module media-chooser">
+  <div class="new-module media-chooser clear">
     <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
     <form role="form">
       <div class="form-group">
@@ -125,9 +123,7 @@
         </div>
       </div>
     </form>
-    <div class="clearfix"></div>
-</div>
-
+  </div>
 </div>
 
 
