--- a/app/assets/stylesheets/config/_base-variables.scss
+++ b/app/assets/stylesheets/config/_base-variables.scss
@@ -151,90 +151,90 @@ $icon-li-width: (30em / 14) !default;
 /* -------------------- BG COLORS -------------------- */
 
 .primary-color-bg{
-  background-color: $primary-color;
+  background-color: $primary-color !important;
 }
 
 .primary-hover-bg{
-  background-color: $primary-hover;
+  background-color: $primary-hover !important;
 }
 
 .primary-fade-bg{
-  background-color: $primary-light;
+  background-color: $primary-light !important;
 }
 
 .white-bg{
-  background-color: $white;
+  background-color: $white !important;
 }
 
 .off-white-bg{
-  background-color: $off-white;
+  background-color: $off-white !important;
 }
 
 .off-white-1-bg{
-  background-color: $off-white-1;
+  background-color: $off-white-1 !important;
 }
 
 .off-white--2bg{
-  background-color: $off-white-2;
+  background-color: $off-white-2 !important;
 }
 
 .black-bg{
-  background-color: $black;
+  background-color: $black !important;
 }
 
 .grey-1-bg{
-  background-color: $grey-1;
+  background-color: $grey-1 !important;
 }
 
 .grey-2-bg{
-  background-color: $grey-2;
+  background-color: $grey-2 !important;
 }
 
 .grey-3-bg{
-  background-color: $grey-3;
+  background-color: $grey-3 !important;
 }
 
 .grey-4-bg{
-  background-color: $grey-4;
+  background-color: $grey-4 !important;
 }
 
 .grey-5-bg{
-  background-color: $grey-5;
+  background-color: $grey-5 !important;
 }
 
 .grey-6-bg{
-  background-color: $grey-6;
+  background-color: $grey-6 !important;
 }
 
 .grey-7-bg{
-  background-color: $grey-7;
+  background-color: $grey-7 !important;
 }
 
 .grey-8-bg{
-  background-color: $grey-8;
+  background-color: $grey-8 !important;
 }
 
 .grey-9-bg{
-  background-color: $grey-9;
+  background-color: $grey-9 !important;
 }
 
 .beige{
-  background-color: $beige;
+  background-color: $beige !important;
 }
 
 
 .red-bg{
-  background-color: $red;
+  background-color: $red !important;
 }
 
 .yellow-bg{
-  background-color: $yellow;
+  background-color: $yellow !important;
 }
 
 .green-bg{
-  background-color: $green;
+  background-color: $green !important;
 }
 
 .mint-bg{
-  background-color: $mint;
+  background-color: $mint !important;
 }
