--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -6,7 +6,6 @@ html{
 
 body{
   overflow-x: hidden;
-  position: relative;
 	font-family: $primary-font;
 }
 
@@ -42,6 +41,12 @@ button{
 	}
 }
 
+* {
+  background-repeat: no-repeat;
+  position: relative;
+  vertical-align: middle;
+}
+
 *::selection {
 	background: $primary-light; /* Safari */
 	color: $white;
@@ -72,6 +77,30 @@ p::-moz-selection {
   margin-bottom: $margin * 3;
 }
 
+.bump-up{
+  top: -1px;
+}
+
+.bump-right{
+  left: 1px;
+}
+
+.bump-down{
+  top: 1px;
+}
+
+.bump-left{
+  left: -1px;
+}
+
+.clear:before, .clear:after {
+    content: " ";
+    display: table;
+}
+
+.clear:after {
+    clear: both;
+}
 
 
 /* -------------------- ELEMENTS -------------------- */
@@ -83,7 +112,6 @@ p::-moz-selection {
 
 .cover{
 	color: $white;
-	position: relative;
 	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 		color: $white;
 	}
@@ -104,7 +132,6 @@ p::-moz-selection {
     top: 0;
   }
   .icon-stack-1x{
-    position: relative;
     top: -1px;
     left: -6px;
     font-size: 14px;
@@ -139,14 +166,12 @@ p::-moz-selection {
   margin: 0 auto;
   padding-bottom: 64%;
   overflow: hidden;
-  position: relative;
   height: 0;
   display: block;
   color: $black;
 }
 
 .video-link{
-	position: relative;
 	display: block;
 	background: $white;
 	&:hover{
@@ -182,7 +207,6 @@ p::-moz-selection {
 }
 
 .video-16-9{
-	position: relative;
 	padding-bottom: 56.25%;
 	height: 0;
 	margin-bottom: 60px;
@@ -197,7 +221,6 @@ p::-moz-selection {
 }
 
 .video-ws{
-	position: relative;
 	padding-bottom: 42.18%;
 	height: 0;
 	margin-bottom: 60px;
@@ -239,7 +262,6 @@ p::-moz-selection {
     line-height: 1;
     margin: 0 2px 0 0;
     left: -5px;
-    position: relative;
   }
   .icon-last{
     margin: 0 0 0 2px;
@@ -247,12 +269,11 @@ p::-moz-selection {
   }
   .delete{
     font-size: 24px;
-    position: relative;
-    top: 1px;
-    line-height: 20px;
     color: #aeaeae;
     left: 2px;
     margin-left: 2px;
+    display: inline-block;
+    padding-bottom: 3px;
     &:hover{
       color: $primary-hover;
     }
@@ -469,7 +490,6 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 .dropdown-wrapper{
   background: $white;
   @include border-radius($radius);
-  position: relative;
   padding: 0;
   select{
     -webkit-appearance: none;
@@ -573,7 +593,6 @@ p.alert, p.notice {
 }
 
 p.notice-top {
-  position: relative;
   top: 85px;
 }
 
