--- a/app/views/refinery/admin/pages/_actions.html.erb
+++ b/app/views/refinery/admin/pages/_actions.html.erb
@@ -1,22 +1,20 @@
 <%= render '/refinery/admin/search', :url => refinery.admin_pages_path %>
 <% content_for :admin_submenu do %>
-<ul class="list-unstyled">
+<ul id="actions" class="list-unstyled active">
   <li>
     <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe + t('.create_new_page'), refinery.new_admin_page_path %>
   </li>
-<!--
-<% if @pages.many? and !searching? %>
-  <li>
-    <%= link_to t('.reorder_pages'), refinery.admin_pages_path,
-                :id => "reorder_action",
-                :class => "reorder_icon" %>
+  <% if @pages.many? and !searching? %>
+    <li>
+      <%= link_to '<i class="gcicon gcicon-reorder"></i>'.html_safe + t('.reorder_pages'),
+                  refinery.admin_pages_path,
+                  :id => "reorder_action" %>
 
-    <%= link_to t('.reorder_pages_done'), refinery.admin_pages_path,
-                :id => "reorder_action_done",
-                :style => "display: none;",
-                :class => "reorder_icon" %>
-  </li>
-<% end %>
--->
+      <%= link_to '<i class="gcicon gcicon-reorder"></i>'.html_safe + t('.reorder_pages_done'),
+                  refinery.admin_pages_path,
+                  :id => "reorder_action_done",
+                  :style => "display: none;" %>
+    </li>
+  <% end %>
 </ul>
 <% end %>
