--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -81,6 +81,10 @@ p::-moz-selection {
   top: -1px;
 }
 
+.bump-up-2{
+  top: -2px;
+}
+
 .bump-right{
   left: 1px;
 }
@@ -394,7 +398,6 @@ form{
   }
   .required{
     color: $red;
-    padding-left: 5px;
   }
 }
 
