--- a/app/assets/stylesheets/partials/_carousel.scss
+++ b/app/assets/stylesheets/partials/_carousel.scss
@@ -26,7 +26,7 @@
 				width: 100%;
 			}
 			.carousel-caption{
-				text-shadow: none;
+				text-shadow: 0px 0px 75px black;
 				@media (min-width: 768px){
 					left: 15%;
 					right: auto;
