Show error fields with red border

--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -623,6 +623,12 @@ p.notice-top {
   color: $red;
 }
 
+.fieldWithErrors {
+  input{
+    border-color: $red;
+  }
+}
+
 #error_explanation,
 .errorExplanation,
 .alert {
