--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -210,6 +210,20 @@ p::-moz-selection {
   }
 }
 
+.video-wrapper{
+	padding-bottom: 56.25%;
+	height: 0;
+	margin-bottom: 60px;
+}
+
+.video-wrapper iframe{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .video-16-9{
 	padding-bottom: 56.25%;
 	height: 0;
