--- a/app/views/refinery/inquiries/admin/inquiries/index.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/index.html.erb
@@ -1,12 +1,11 @@
 <% content_for :admin_content do %>
-<div id='admin-page-content'>
-  <%= render "/refinery/admin/search", :url => request.path.gsub("//", "/") %>
+  <section id='admin-page-content'>
   <% if searching? %>
     <%= render 'refinery/admin/search_header', :url => request.path.gsub("//", "/") %>
     <% if @inquiries.any? %>
       <%= will_paginate @inquiries %>
-      <ul>
-        <%= render :partial => "inquiry", :collection => @inquiries %>
+      <ul id='sortable_list' class="list-unstyled">
+        <%= render :partial => 'inquiry', :collection => @inquiries %>
       </ul>
       <%= will_paginate @inquiries %>
     <% else %>
@@ -17,7 +16,7 @@
       <%= will_paginate @inquiries %>
       <% group_by_date(@inquiries).each do |container| %>
         <h3><%= l((inquiry_group = container.last).first.created_at, :format => :short) %></h3>
-        <ul>
+        <ul id='sortable_list' class="list-unstyled">
           <%= render :partial => 'inquiry', :collection => inquiry_group %>
         </ul>
       <% end %>
@@ -28,6 +27,6 @@
       </p>
     <% end -%>
   <% end %>
-</div>
+  </section>
 <% end %>
-<%= render 'submenu' %>
+<%= render 'refinery/inquiries/admin/submenu' %>
