form labels align left

--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -404,7 +404,7 @@ ul li{
 form{
   label{
     padding-top: 15px;
-    text-align: right;
+    text-align: left;
     font-weight: 400;
   }
   .form-control-static{
