--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -9,7 +9,10 @@
     <!-- div id='tooltip_container'></div -->
 
     <section id="wrapper">
-      <section id="sidebar-left" class="sidebar">
+      
+      <a href="" class="menu-link menu-link-left"><i class="icon icon-gear"></i></a>
+      
+      <section id="sidebar-left" class="ui large inverted vertical sidebar menu">
         <div id="sidebar-left-inner">
           <%= render 'refinery/admin/menu' %>
         </div>
@@ -17,6 +20,9 @@
       
       
       <section class="inner-wrapper <%= 'single-sidebar' unless content_for?(:admin_sidebar) %>">
+        <div class="ui right floated black launch button">
+        <i class="list layout icon"></i> Menu
+      </div>
         <div id="flash_container">
           <%= render '/refinery/no_script' %>
           <%= render '/refinery/message' %>
@@ -47,6 +53,7 @@
           </div>
         </section>
       <% end %>
+      
     </section>
   </body>
 </html>
