--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -7,6 +7,7 @@
 @import "config/base";
 @import "partials/icons-glass";
 @import "partials/icon-styles-glass";
+@import "partials/sidebar";
 
 
 /* -------------------- TEMPORARY -------------------- */
@@ -251,6 +252,18 @@ body{
 
 
 
+.menu-link{
+  width: 60px;
+  height: 60px;
+  background: $primary-color;
+  position: absolute;
+  top: 30px;
+  color: $white;
+}
+
+.menu-link-left{
+  left: 30px;
+}
 
 
 #wrapper{
