Change inquiries settings in bootsrap modal

--- a/app/views/refinery/inquiries/admin/_submenu.html.erb
+++ b/app/views/refinery/inquiries/admin/_submenu.html.erb
@@ -16,14 +16,18 @@
     </li>
     <li>
       <%= link_to t('.update_notified'),
-                    refinery.edit_inquiries_admin_setting_path(:inquiry_notification_recipients, :dialog => true, :height => 300),
-                    :class => "user_comment_icon" %>
+                  refinery.edit_inquiries_admin_setting_path(:inquiry_notification_recipients),
+                  { :class => 'open-modal-form' }
+      %>
     </li>
     <li>
       <%= link_to t('.edit_confirmation_email'),
-                  refinery.edit_inquiries_admin_setting_path(:inquiry_confirmation_body, :dialog => true),
-                  :class => "edit_email_icon" %>
+                  refinery.edit_inquiries_admin_setting_path(:inquiry_confirmation_body),
+                  { :class => 'open-modal-form' }
+      %>
     </li>
   </ul>
+
+  <%= render 'refinery/admin/glass/modal' %>
 <% end %>
 
