--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -8,21 +8,19 @@
     <%= render '/refinery/site_bar' %>
     <!-- div id='tooltip_container'></div -->
 
-    <section id="wrapper">
-      
-      <a href="" class="menu-link menu-link-left"><i class="gcicon gcicon-gear"></i></a>
-      
-      <section id="sidebar-left" class="ui large inverted vertical sidebar menu">
-        <div id="sidebar-left-inner">
-          <%= render 'refinery/admin/menu' %>
-        </div>
-      </section>
-      
-      
-      <section class="inner-wrapper <%= 'single-sidebar' unless content_for?(:admin_sidebar) %>">
-        <div class="ui right floated black launch button">
+    <section id="sidebar-left" class="ui large inverted vertical sidebar menu">
+      <div id="sidebar-left-inner">
+        <%= render 'refinery/admin/menu' %>
+      </div>
+    </section>
+
+    <section id="wrapper" class="pusher">
+      <div class="ui right floated black launch button">
         <i class="list layout icon"></i> Menu
       </div>
+      <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="icon icon-gear"></i></a>
+      
+      <section class="inner-wrapper <%= 'single-sidebar' unless content_for?(:admin_sidebar) %>">
         <div id="flash_container">
           <%= render '/refinery/no_script' %>
           <%= render '/refinery/message' %>
@@ -44,6 +42,8 @@
             </div>
           </div>
         <% end %>
+
+        <%= render 'refinery/admin/glass/modal' %>
       </section>
 
       <% if content_for?(:admin_sidebar) %>
@@ -53,7 +53,6 @@
           </div>
         </section>
       <% end %>
-      
     </section>
   </body>
 </html>
